[FIX] point_of_sale: lot-serial dialog in small ui
Before this commit:
- Lot-serial dropdown not visible in the small UI.

After this commit:
- Displayed the lot-serial dropdown in the small UI.

opw-4551161

closes odoo/odoo#197086

X-original-commit: cf9928f193f94aeadc5b4f603c3700e0c32d3d9d

--- a/addons/point_of_sale/static/src/app/components/popups/select_lot_popup/edit_list_input/edit_list_input.scss
+++ b/addons/point_of_sale/static/src/app/components/popups/select_lot_popup/edit_list_input/edit_list_input.scss
@@ -35,3 +35,9 @@
 .pos .edit-list-inputs .options-dropdown .option:hover {
     background-color: $gray-200;
 }
+
+@media (max-width: 575px) {
+    .pos .edit-list-inputs .options-dropdown {
+        position: static;
+    }
+}
